commit needed to merge

--- a/Developer/Views/Home/Index.cshtml
+++ b/Developer/Views/Home/Index.cshtml
@@ -19,42 +19,42 @@
         </div>
         <div class="col-md-6" ng-show="myProperty.value =='house'">
             <small>Typ oferty :</small>
-            <select class="form-control input-sm" ng-model="myoffertTypeHouse" ng-options="offert.ToLet as boolToStr(offert.ToLet) for offert in houseList|filter:{UsableArea:myhouseUsableArea||undefined}|filter:{City:myhouseCity||undefined}|filter:{Price:myhousePrice||undefined}|unique:'ToLet'">
+@*            <select class="form-control input-sm" ng-model="myoffertTypeHouse" ng-options="offert as boolToStr(offert.ToLet) for offert in houseList|filter:{UsableArea:myhouseUsableArea||undefined}|filter:{City:myhouseCity||undefined}|filter:{Price:myhousePrice||undefined}|unique:'ToLet'">
                 <option style="display: none" value="">Wybierz rodzaj</option>
-            </select>
+            </select>*@
         </div>
         <div class="col-md-6" ng-show="myProperty.value =='flat'">
             <small>Typ oferty :</small>
-            <select class="form-control input-sm" ng-model="myoffertTypeFlat" ng-options="offert.ToLet as boolToStr(offert.ToLet) for offert in flatList|filter:{Rooms:myflatRoom||undefined}|filter:{Price:myflatPrice||undefined}|filter:{City:myflatCity||undefined}|unique:'ToLet'">
+@*            <select class="form-control input-sm" ng-model="myoffertTypeFlat" ng-options="offert as boolToStr(offert.ToLet) for offert in flatList|filter:{Rooms:myflatRoom||undefined}|filter:{Price:myflatPrice||undefined}|filter:{City:myflatCity||undefined}|unique:'ToLet'">
                 <option style="display: none" value="">Wybierz rodzaj</option>
-            </select>
+            </select>*@
         </div>
     </div>
     @* HOUSES *@
     <div class="row" style="margin-top: 25px" ng-show="myProperty.value =='house'">
         <div class="col-md-4">
             <small>Miejscowość:</small>
-            <select class="form-control input-sm" ng-model="myhouseCity" ng-options="city.City as city.City for city in houseList|filter:{ToLet:myoffertTypeHouse||undefined}|filter:{UsableArea:myhouseUsableArea||undefined}|filter:{Price:myhousePrice||undefined}|unique:'City'">
+@*            <select class="form-control input-sm" ng-model="myhouseCity" ng-options="city.City as city.City for city in houseList|filter:{ToLet:myoffertTypeHouse.ToLet}|filter:{UsableArea:myhouseUsableArea||undefined}|filter:{Price:myhousePrice||undefined}|unique:'City'">
                 <option value="">Wszystkie</option>
-            </select>
+            </select>*@
         </div>
         <div class="col-md-4">
             <small>Powierzchnia użytkowa:</small>
-            <select class="form-control input-sm" ng-model="myhouseUsableArea" ng-options="usablearea.UsableArea as usablearea.UsableArea for usablearea in houseList|filter:{ToLet:myoffertTypeHouse||undefined}|filter:{Price:myhousePrice||undefined}|filter:{City:myhouseCity||undefined}|unique:'UsableArea'">
+@*            <select class="form-control input-sm" ng-model="myhouseUsableArea" ng-options="usablearea.UsableArea as usablearea.UsableArea for usablearea in houseList|filter:{ToLet:myoffertTypeHouse.ToLet}|filter:{Price:myhousePrice||undefined}|filter:{City:myhouseCity||undefined}|unique:'UsableArea'">
                 <option value="">Wszystkie powierzchnie</option>
-            </select>
+            </select>*@
         </div>
         <div class="col-md-4">
             <small>Cena:</small>
-            <select class="form-control input-sm" ng-model="myhousePrice" ng-options="price.Price as price.Price for price in houseList|filter:{ToLet:myoffertTypeHouse||undefined}|filter:{UsableArea:myhouseUsableArea||undefined}|filter:{City:myhouseCity||undefined}|unique:'Price'">
+@*            <select class="form-control input-sm" ng-model="myhousePrice" ng-options="price.Price as price.Price for price in houseList|filter:{ToLet:myoffertTypeHouse.ToLet}|filter:{UsableArea:myhouseUsableArea||undefined}|filter:{City:myhouseCity||undefined}|unique:'Price'">
                 <option value="">Każda cena</option>
-            </select>
+            </select>*@
         </div>
         <div class="row">
             <div class="col-md-4">
-                <select class="form-control input-sm" style="margin-top: 15px; margin-left: 15px;" ng-model="mySort" ng-options="sort.name for sort in sorting">
+@*                <select class="form-control input-sm" style="margin-top: 15px; margin-left: 15px;" ng-model="mySort" ng-options="sort.name for sort in sorting">
                     <option style="display: none" value="">Rodzaj sortowania</option>
-                </select>
+                </select>*@
             </div>
             <div class="col-md-4"style="padding-left: 22px; padding-right: 22px;">
                 <button class="btn btn-sm btn-default" style="margin-top: 15px; width: 100%" ng-click="clearFilters(myProperty.value)">Wyczyść filtry</button>
@@ -65,21 +65,21 @@
     <div class="row" style="margin-top: 25px" ng-show="myProperty.value =='flat'">
         <div class="col-md-4">
             <small>Miejscowość:</small>
-            <select class="form-control input-sm" ng-model="myflatCity" ng-options="city.City as city.City for city in flatList|filter:{ToLet:myoffertTypeFlat||undefined}|filter:{Rooms:myflatRoom||undefined}|filter:{Price:myflatPrice||undefined}|unique:'City'">
+            <select class="form-control input-sm" ng-model="myflatCity" ng-options="city.City as city.name for city in filteredflatListCity = (flatList|unique:'City')">
                 <option ng-model="myflatCity" value="">Wszystkie</option>
             </select>
         </div>
         <div class="col-md-4">
             <small>Ilość pokoi:</small>
-            <select class="form-control input-sm" ng-model="myflatRoom" ng-options="room.Rooms as room.Rooms for room in flatList|filter:{City:myflatCity||undefined}|filter:{ToLet:myoffertTypeFlat||endefined}|filter:{Price:myflatPrice||undefined}|unique:'Rooms'">
+@*            <select class="form-control input-sm" ng-model="myflatRoom" ng-options="room.Rooms as room.Rooms for room in flatList|filter:{City:myflatCity||undefined}|filter:{ToLet:myoffertTypeFlat.ToLet}|filter:{Price:myflatPrice||undefined}|unique:'Rooms'">
                 <option value="">Każda ilość</option>
-            </select>
+            </select>*@
         </div>
         <div class="col-md-4">
             <small>Cena:</small>
-            <select class="form-control input-sm" ng-model="myflatPrice" ng-options="price.Price as price.Price for price in flatList|filter:{City:myflatCity||undefined}|filter:{ToLet:myoffertTypeFlat||undefined}|filter:{Rooms:myflatRoom||undefined}|unique:'Price'">
+@*            <select class="form-control input-sm" ng-model="myflatPrice" ng-options="price.Price as price.Price for price in flatList|filter:{City:myflatCity||undefined}|filter:{ToLet:myoffertTypeFlat.ToLet}|filter:{Rooms:myflatRoom||undefined}|unique:'Price'">
                 <option value="">Każda cena</option>
-            </select>
+            </select>*@
         </div>
         <div class="row">
             <div class="col-md-4">
@@ -96,27 +96,27 @@
     <div class="row" style="margin-top: 25px" ng-show="myProperty.value =='land'">
         <div class="col-md-4">
             <small>Miejscowość:</small>
-            <select class="form-control input-sm" ng-model="mylandCity" ng-options="city.City as city.City for city in landList|filter:{Area:mylandArea||undefined}|filter:{Price:mylandPrice||undefined}|unique:'City'">
+@*            <select class="form-control input-sm" ng-model="mylandCity" ng-options="city.City as city.City for city in landList|filter:{Area:mylandArea||undefined}|filter:{Price:mylandPrice||undefined}|unique:'City'">
                 <option value="">Wszystkie</option>
-            </select>
+            </select>*@
         </div>
         <div class="col-md-4">
             <small>Powierzchnia:</small>
-            <select class="form-control input-sm" ng-model="mylandArea" ng-options="area.Area as area.Area for area in landList|filter:{City:mylandCity||undefined}|filter:{Price:mylandPrice||undefined}|unique:'Area'">
+@*            <select class="form-control input-sm" ng-model="mylandArea" ng-options="area.Area as area.Area for area in landList|filter:{City:mylandCity||undefined}|filter:{Price:mylandPrice||undefined}|unique:'Area'">
                 <option value="">Wszystkie powierzchnie</option>
-            </select>
+            </select>*@
         </div>
         <div class="col-md-4">
             <small>Cena:</small>
-            <select class="form-control input-sm" ng-model="mylandPrice" ng-options="price.Price as price.Price for price in landList|filter:{City:mylandCity||undefined}|filter:{Area:mylandArea||undefined}|unique:'Price'">
-                <option style="display: none" value="">Każda cena</option>
-            </select>
+@*            <select class="form-control input-sm" ng-model="mylandPrice" ng-options="price.Price as price.Price for price in landList|filter:{City:mylandCity||undefined}|filter:{Area:mylandArea||undefined}|unique:'Price'">
+                <option value="">Każda cena</option>
+            </select>*@
         </div>
         <div class="row">
             <div class="col-md-4">
-                <select class="form-control input-sm" style="margin-top: 15px; margin-left: 15px;" ng-model="mySort" ng-options="sort.name for sort in sorting">
+@*                <select class="form-control input-sm" style="margin-top: 15px; margin-left: 15px;" ng-model="mySort" ng-options="sort.name for sort in sorting">
                     <option value="">Rodzaj sortowania</option>
-                </select>
+                </select>*@
             </div>
             <div class="col-md-4"style="padding-left: 22px; padding-right: 22px;">
                 <button class="btn btn-sm btn-default" style="margin-top: 15px; width: 100%" ng-click="clearFilters(myProperty.value)">Wyczyść filtry</button>
@@ -135,7 +135,7 @@
 @* LIST FLATS*@
     <div ng-show="myProperty.value =='flat'">
         <ul style="padding-left: 0px;">
-            <li dir-paginate="flat in filteredflatList = (flatList|filter:{City:myflatCity||undefined}|filter:{ToLet:myoffertTypeFlat||undefined}|filter:{Rooms:myflatRoom||undefined}|filter:{Price:myflatPrice||undefined}|orderBy:mySort.value:mySort.reverse)|itemsPerPage: pageSize:'flat'" current-page="currentPage" pagination-id="flat">
+            <li dir-paginate="flat in filteredflatList = (flatList|filter:{City:myflatCity||undefined}|filter:{ToLet:myoffertTypeFlat.ToLet}|filter:{Rooms:myflatRoom||undefined}|filter:{Price:myflatPrice||undefined}|orderBy:mySortFunction:mySort.reverse)|itemsPerPage: pageSize:'flat'" current-page="currentPage" pagination-id="flat">
                 <div class="col-md-12 custom-advert-panel">
                     <div class="col-md-3">
                         <img ng-show="flat.Picture != null" ng-src="/Content/Photos/{{flat.Picture.Link}}" style="width: 100%; border:1px solid"/>
@@ -173,8 +173,8 @@
     </div>
     @* LIST HOUSES*@
     <div ng-show="myProperty.value =='house'">
-        <ul style="padding-left: 0px;">
-            <li dir-paginate="house in filteredhouseList = (houseList|filter:{City:myhouseCity||undefined}|filter:{ToLet:myoffertTypeHouse||undefined}|filter:{UsableArea:myhouseUsableArea||undefined}|filter:{Price:myhousePrice||undefined}|orderBy:mySort.value:mySort.reverse)|itemsPerPage: pageSize:'house'" current-page="currentPage" pagination-id="house">
+        <ul style="padding-left: 0px;">                                                                                                                                                                                                        
+            <li dir-paginate="house in filteredhouseList = (houseList|filter:{City:myhouseCity||undefined}|filter:{ToLet:myoffertTypeHouse.ToLet}|filter:{UsableArea:myhouseUsableArea||undefined}|filter:{Price:myhousePrice||undefined}|orderBy:mySortFunction:mySort.reverse)|itemsPerPage: pageSize:'house'" current-page="currentPage" pagination-id="house">
                 <div class="col-md-12 custom-advert-panel">
                     <div class="col-md-3">
                         <img ng-show="house.Picture != null" ng-src="/Content/Photos/{{house.Picture.Link}}" style="width: 100%; border:1px solid"/>
@@ -213,7 +213,7 @@
     @* LIST LAND*@
     <div ng-show="myProperty.value =='land'">
         <ul style="padding-left: 0px;">
-            <li dir-paginate="land in filteredlandList = (landList|filter:{City:mylandCity||undefined}|filter:{Area:mylandArea||undefined}|filter:{Price:mylandPrice||undefined}|orderBy:mySort.value:mySort.reverse)|itemsPerPage: pageSize:'land'" current-page="currentPage" pagination-id="land">
+            <li dir-paginate="land in filteredlandList = (landList|filter:{City:mylandCity||undefined}|filter:{Area:mylandArea||undefined}|filter:{Price:mylandPrice||undefined}|orderBy:mySortFunction:mySort.reverse)|itemsPerPage: pageSize:'land'" current-page="currentPage" pagination-id="land">
                 <div class="col-md-12 custom-advert-panel">
                     <div class="col-md-3">
                         <img ng-show="land.Picture != null" ng-src="/Content/Photos/{{land.Picture.Link}}" style="width: 100%; border:1px solid"/>
