--- a/Developer/Views/Home/Index.cshtml
+++ b/Developer/Views/Home/Index.cshtml
@@ -36,19 +36,19 @@
             <div class="row" style="margin-top: 25px" ng-show="myProperty.value =='house'">
                 <div class="col-md-4">
                     <small>Miejscowość:</small>
-                    <select class="form-control input-sm" ng-model="myhouseCity" ng-options="city.City as city.counter for city in houseList|filter:{ToLet:myoffertTypeHouse||undefined}|filter:{UsableArea:myhouseUsableArea||undefined}|filter:{Price:myhousePrice||undefined}|unique:'City'">
+                    <select class="form-control input-sm" ng-model="myhouseCity" ng-options="city.City as city.counter for city in houseList|filter:{ToLet:myoffertTypeHouse||undefined}|filter:{UsableArea:myhouseUsableArea||undefined}|filter:{Price:myhousePrice||undefined}|filter:{City:'!!'}|unique:'City'">
                         <option value="">Wszystkie</option>
                     </select>
                 </div>
                 <div class="col-md-4">
                     <small>Powierzchnia użytkowa:</small>
-                    <select class="form-control input-sm" ng-model="myhouseUsableArea" ng-options="usablearea.UsableArea as usablearea.counter for usablearea in houseList|filter:{ToLet:myoffertTypeHouse||undefined}|filter:{Price:myhousePrice||undefined}|filter:{City:myhouseCity||undefined}|unique:'UsableArea'">
+                    <select class="form-control input-sm" ng-model="myhouseUsableArea" ng-options="usablearea.UsableArea as usablearea.counter for usablearea in houseList|filter:{ToLet:myoffertTypeHouse||undefined}|filter:{Price:myhousePrice||undefined}|filter:{City:myhouseCity||undefined}|filter:{UsableArea:'!!'}|unique:'UsableArea'">
                         <option value="">Wszystkie powierzchnie</option>
                     </select>
                 </div>
                 <div class="col-md-4">
                     <small>Cena:</small>
-                    <select class="form-control input-sm" ng-model="myhousePrice" ng-options="price.Price as price.counter for price in houseList|filter:{ToLet:myoffertTypeHouse||undefined}|filter:{UsableArea:myhouseUsableArea||undefined}|filter:{City:myhouseCity||undefined}|unique:'Price'">
+                    <select class="form-control input-sm" ng-model="myhousePrice" ng-options="price.Price as price.counter for price in houseList|filter:{ToLet:myoffertTypeHouse||undefined}|filter:{UsableArea:myhouseUsableArea||undefined}|filter:{City:myhouseCity||undefined}|filter:{Price:'!!'}|unique:'Price'">
                         <option value="">Każda cena</option>
                     </select>
                 </div>
@@ -67,19 +67,19 @@
             <div class="row" style="margin-top: 25px" ng-show="myProperty.value =='flat'">
                 <div class="col-md-4">
                     <small>Miejscowość:</small>
-                    <select class="form-control input-sm" ng-model="myflatCity" ng-options="city.City as city.counter for city in flatList|filter:{ToLet:myoffertTypeFlat||undefined}|filter:{Rooms:myflatRoom||undefined}|filter:{Price:myflatPrice||undefined}|unique:'City'">
+                    <select class="form-control input-sm" ng-model="myflatCity" ng-options="city.City as city.counter for city in flatList|filter:{ToLet:myoffertTypeFlat||undefined}|filter:{Rooms:myflatRoom||undefined}|filter:{Price:myflatPrice||undefined}|filter:{City:'!!'}|unique:'City'">
                         <option ng-model="myflatCity" value="">Wszystkie</option>
                     </select>
                 </div>
                 <div class="col-md-4">
                     <small>Ilość pokoi:</small>
-                    <select class="form-control input-sm" ng-model="myflatRoom" ng-options="room.Rooms as room.counter for room in flatList|filter:{City:myflatCity||undefined}|filter:{ToLet:myoffertTypeFlat||endefined}|filter:{Price:myflatPrice||undefined}|unique:'Rooms'">
+                    <select class="form-control input-sm" ng-model="myflatRoom" ng-options="room.Rooms as room.counter for room in flatList|filter:{City:myflatCity||undefined}|filter:{ToLet:myoffertTypeFlat||endefined}|filter:{Price:myflatPrice||undefined}|filter:{Rooms:'!!'}|unique:'Rooms'">
                         <option value="">Każda ilość</option>
                     </select>
                 </div>
                 <div class="col-md-4">
                     <small>Cena:</small>
-                    <select class="form-control input-sm" ng-model="myflatPrice" ng-options="price.Price as price.counter for price in flatList|filter:{City:myflatCity||undefined}|filter:{ToLet:myoffertTypeFlat||undefined}|filter:{Rooms:myflatRoom||undefined}|unique:'Price'">
+                    <select class="form-control input-sm" ng-model="myflatPrice" ng-options="price.Price as price.counter for price in flatList|filter:{City:myflatCity||undefined}|filter:{ToLet:myoffertTypeFlat||undefined}|filter:{Rooms:myflatRoom||undefined}|filter:{Price:'!!'}|unique:'Price'">
                         <option value="">Każda cena</option>
                     </select>
                 </div>
@@ -98,20 +98,20 @@
             <div class="row" style="margin-top: 25px" ng-show="myProperty.value =='land'">
                 <div class="col-md-4">
                     <small>Miejscowość:</small>
-                    <select class="form-control input-sm" ng-model="mylandCity" ng-options="city.City as city.counter for city in landList|filter:{Area:mylandArea||undefined}|filter:{Price:mylandPrice||undefined}|unique:'City'">
+                    <select class="form-control input-sm" ng-model="mylandCity" ng-options="city.City as city.counter for city in landList|filter:{Area:mylandArea||undefined}|filter:{Price:mylandPrice||undefined}|filter:{City:'!!'}|unique:'City'">
                         <option value="">Wszystkie</option>
                     </select>
                 </div>
                 <div class="col-md-4">
                     <small>Powierzchnia:</small>
-                    <select class="form-control input-sm" ng-model="mylandArea" ng-options="area.Area as area.counter for area in landList|filter:{City:mylandCity||undefined}|filter:{Price:mylandPrice||undefined}|unique:'Area'">
+                    <select class="form-control input-sm" ng-model="mylandArea" ng-options="area.Area as area.counter for area in landList|filter:{City:mylandCity||undefined}|filter:{Price:mylandPrice||undefined}|filter:{Area:'!!'}|unique:'Area'">
                         <option value="">Wszystkie powierzchnie</option>
                     </select>
                 </div>
                 <div class="col-md-4">
                     <small>Cena:</small>
-                    <select class="form-control input-sm" ng-model="mylandPrice" ng-options="price.Price as price.counter for price in landList|filter:{City:mylandCity||undefined}|filter:{Area:mylandArea||undefined}|unique:'Price'">
-                        <option style="display: none" value="">Każda cena</option>
+                    <select class="form-control input-sm" ng-model="mylandPrice" ng-options="price.Price as price.counter for price in landList|filter:{City:mylandCity||undefined}|filter:{Area:mylandArea||undefined}|filter:{Price:'!!'}|unique:'Price'">
+                        <option  value="">Każda cena</option>
                     </select>
                 </div>
                 <div class="row">
@@ -127,7 +127,7 @@
             </div>
         </div>
 
-        <div id="spinner" class="col-md-12" style="margin-left: 15px; padding-left: 0px; display: none">
+        <div id="spinner" class="col-md-12" style="margin-left: 15px; padding-left: 0px;">
             <div class="spinner">
                 <div class="dot1"></div>
                 <div class="dot2"></div>
@@ -137,7 +137,7 @@
         @* LIST FLATS*@
         <div ng-show="myProperty.value =='flat'">
             <ul style="padding-left: 0px;">
-                <li dir-paginate="flat in filteredflatList = (flatList|filter:{City:myflatCity||undefined}|filter:{ToLet:myoffertTypeFlat||undefined}|filter:{Rooms:myflatRoom||undefined}|filter:{Price:myflatPrice||undefined}|orderBy:mySort.value:mySort.reverse)|itemsPerPage: pageSize:'flat'" current-page="currentPage" pagination-id="flat">
+                <li dir-paginate="flat in filteredflatList = (flatList|filter:{City:myflatCity||undefined}|filter:{ToLet:myoffertTypeFlat||undefined}|filter:{Rooms:myflatRoom||undefined}|filter:{Price:myflatPrice||undefined}|orderBy:mySortFunction:mySort.reverse)|itemsPerPage: pageSize:'flat'" current-page="currentPage" pagination-id="flat">
                     <div class="col-md-12 custom-advert-panel">
                         <div class="col-md-3">
                             <img ng-show="flat.Picture != null" ng-src="/Content/Photos/{{flat.Picture.Link}}" style="width: 100%; border: 1px solid" />
@@ -178,7 +178,7 @@
         @* LIST HOUSES*@
         <div ng-show="myProperty.value =='house'">
             <ul style="padding-left: 0px;">
-                <li dir-paginate="house in filteredhouseList = (houseList|filter:{City:myhouseCity||undefined}|filter:{ToLet:myoffertTypeHouse||undefined}|filter:{UsableArea:myhouseUsableArea||undefined}|filter:{Price:myhousePrice||undefined}|orderBy:mySort.value:mySort.reverse)|itemsPerPage: pageSize:'house'" current-page="currentPage" pagination-id="house">
+                <li dir-paginate="house in filteredhouseList = (houseList|filter:{City:myhouseCity||undefined}|filter:{ToLet:myoffertTypeHouse||undefined}|filter:{UsableArea:myhouseUsableArea||undefined}|filter:{Price:myhousePrice||undefined}|orderBy:mySortFunction:mySort.reverse)|itemsPerPage: pageSize:'house'" current-page="currentPage" pagination-id="house">
                     <div class="col-md-12 custom-advert-panel">
                         <div class="col-md-3">
                             <img ng-show="house.Picture != null" ng-src="/Content/Photos/{{house.Picture.Link}}" style="width: 100%; border: 1px solid" />
@@ -219,7 +219,7 @@
         @* LIST LAND*@
         <div ng-show="myProperty.value =='land'">
             <ul style="padding-left: 0px;">
-                <li dir-paginate="land in filteredlandList = (landList|filter:{City:mylandCity||undefined}|filter:{Area:mylandArea||undefined}|filter:{Price:mylandPrice||undefined}|orderBy:mySort.value:mySort.reverse)|itemsPerPage: pageSize:'land'" current-page="currentPage" pagination-id="land">
+                <li dir-paginate="land in filteredlandList = (landList|filter:{City:mylandCity||undefined}|filter:{Area:mylandArea||undefined}|filter:{Price:mylandPrice||undefined}|orderBy:mySortFunction:mySort.reverse)|itemsPerPage: pageSize:'land'" current-page="currentPage" pagination-id="land">
                     <div class="col-md-12 custom-advert-panel">
                         <div class="col-md-3">
                             <img ng-show="land.Picture != null" ng-src="/Content/Photos/{{land.Picture.Link}}" style="width: 100%; border: 1px solid" />
