--- a/Developer/Views/Home/CreateOffer.cshtml
+++ b/Developer/Views/Home/CreateOffer.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "View";
 }
 <div class="row" style="margin-right: 15px">
-<div class="col-md-12 custom-left-panel" style="margin-left: 15px">
+<div class="col-md-12 custom-center-panel" style="margin-left: 15px">
     <h4>Dodaj bezpłatnie ofertę</h4>
 
 
@@ -36,69 +36,66 @@
             @Html.AntiForgeryToken()
             <div class="form-group-sm">
                 <div class="row">
-                    <div class="panel panel-warning">
-                        <div class="panel-heading">
-                            <h3 class="panel-title">Dane klienta</h3>
-                        </div>
-                        <div class="panel-body">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <small>Imię i nazwisko</small>
-                                    @Html.EditorFor(model => model.FullName, new {htmlAttributes = new {@class = "form-control", @style = "max-width:none" + ((ViewData.ModelState.ContainsKey("FullName") && ViewData.ModelState["FullName"].Errors.Count > 0) ? ";border: 2px solid red" : "")}})
-                                </div>
-                                <div class="col-md-6">
-                                    <small>Email</small>
-                                    @Html.EditorFor(model => model.Email, new {htmlAttributes = new {@class = "form-control", @style = "max-width:none" + ((ViewData.ModelState.ContainsKey("Email") && ViewData.ModelState["Email"].Errors.Count > 0) ? ";border: 2px solid red" : "")}})
-                                </div>
+                    <div class="custom-advert-panel-title">
+                        Dane klienta
+                    </div>
+                    <div class="custom-advert-panel-body">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <small>Imię i nazwisko</small>
+                                @Html.EditorFor(model => model.FullName, new { htmlAttributes = new { @class = "form-control", @style = "max-width:none" + ((ViewData.ModelState.ContainsKey("FullName") && ViewData.ModelState["FullName"].Errors.Count > 0) ? ";border: 2px solid red" : "") } })
                             </div>
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <small>Nr. Telefonu</small>
-                                    @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control", @style = "max-width:none" + ((ViewData.ModelState.ContainsKey("PhoneNumber") && ViewData.ModelState["PhoneNumber"].Errors.Count > 0) ? ";border: 2px solid red" : "") } })
-                                </div>
+                            <div class="col-md-6">
+                                <small>Email</small>
+                                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", @style = "max-width:none" + ((ViewData.ModelState.ContainsKey("Email") && ViewData.ModelState["Email"].Errors.Count > 0) ? ";border: 2px solid red" : "") } })
                             </div>
                         </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <small>Nr. Telefonu</small>
+                                @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control", @style = "max-width:none" + ((ViewData.ModelState.ContainsKey("PhoneNumber") && ViewData.ModelState["PhoneNumber"].Errors.Count > 0) ? ";border: 2px solid red" : "") } })
+                            </div>
+                        </div>
+                    </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="panel panel-warning">
-                        <div class="panel-heading">
-                            <h3 class="panel-title">Podstawowe informacje</h3>
-                        </div>
-                        <div class="panel-body">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <small>Cena</small>
-                                    @Html.EditorFor(model => model.Price, new {htmlAttributes = new {@class = "form-control", @style = "max-width:none" + ((ViewData.ModelState.ContainsKey("Price") && ViewData.ModelState["Price"].Errors.Count > 0) ? ";border: 2px solid red" : "")}})
-                                </div>
-                                <div class="col-md-6">
-                                    <small>Nieruchomość</small>
-                                    @Html.EnumDropDownListFor(model => model.AdType, new {@class = "form-control", @style = "max-width:none" + ((ViewData.ModelState.ContainsKey("AdType") && ViewData.ModelState["AdType"].Errors.Count > 0) ? ";border: 2px solid red" : "")})
-                                </div>
+                    <div class="custom-advert-panel-title">
+                        Podstawowe informacje
+                    </div>
+                    <div class="custom-advert-panel-body">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <small>Cena</small>
+                                @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control", @style = "max-width:none" + ((ViewData.ModelState.ContainsKey("Price") && ViewData.ModelState["Price"].Errors.Count > 0) ? ";border: 2px solid red" : "") } })
                             </div>
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <small>Miasto</small>
-                                    @Html.EditorFor(model => model.City, new { htmlAttributes = new { @class = "form-control", @style = "max-width:none" + ((ViewData.ModelState.ContainsKey("City") && ViewData.ModelState["City"].Errors.Count > 0) ? ";border: 2px solid red" : "") } })
-                                </div>
-                                <div class="col-md-6">
-                                    <small>Lokalizacja</small>
-                                    @Html.EditorFor(model => model.Location, new { htmlAttributes = new { @class = "form-control", @style = "max-width:none" + ((ViewData.ModelState.ContainsKey("Location") && ViewData.ModelState["Location"].Errors.Count > 0) ? ";border: 2px solid red" : "") } })
-                                </div>
+                            <div class="col-md-6">
+                                <small>Nieruchomość</small>
+                                @Html.EnumDropDownListFor(model => model.AdType, new { @class = "form-control", @style = "max-width:none" + ((ViewData.ModelState.ContainsKey("AdType") && ViewData.ModelState["AdType"].Errors.Count > 0) ? ";border: 2px solid red" : "") })
                             </div>
                         </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="panel panel-warning">
-                        <div class="panel-heading">
-                            <h3 class="panel-title">Opis</h3>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <small>Miasto</small>
+                                @Html.EditorFor(model => model.City, new { htmlAttributes = new { @class = "form-control", @style = "max-width:none" + ((ViewData.ModelState.ContainsKey("City") && ViewData.ModelState["City"].Errors.Count > 0) ? ";border: 2px solid red" : "") } })
+                            </div>
+                            <div class="col-md-6">
+                                <small>Lokalizacja</small>
+                                @Html.EditorFor(model => model.Location, new { htmlAttributes = new { @class = "form-control", @style = "max-width:none" + ((ViewData.ModelState.ContainsKey("Location") && ViewData.ModelState["Location"].Errors.Count > 0) ? ";border: 2px solid red" : "") } })
+                            </div>
                         </div>
-                        <div class="panel-body">
-                            @Html.TextAreaFor(model => model.Description, new {@class = "form-control", @style = "max-width:none; height: 200px" + ((ViewData.ModelState.ContainsKey("City") && ViewData.ModelState["City"].Errors.Count > 0) ? ";border: 2px solid red" : "")})
-                        </div>
-                    </div>
                 </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="custom-advert-panel-title">
+                                Opis
+                            </div>
+                            <div class="custom-advert-panel-body">
+                                @Html.TextAreaFor(model => model.Description, new { @class = "form-control", @style = "max-width:none; height: 200px" + ((ViewData.ModelState.ContainsKey("City") && ViewData.ModelState["City"].Errors.Count > 0) ? ";border: 2px solid red" : "") })
+                            </div>
+                        </div>
+
+                    </div>
                 <div class="row" style="text-align:center">
                     <button type="submit" class="btn btn-sm btn-success" style="width:100px">Wyślij</button>
                 </div>
