--- a/Developer/Views/Admin/Login.cshtml
+++ b/Developer/Views/Admin/Login.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Developer.Models.ViewModels.LoginViewModel
 <div class="col-md-12 custom-center-panel">
     @{
-        if (!Model.Authorized && !String.IsNullOrEmpty(Model.Login) && !String.IsNullOrEmpty(Model.Password))
+        if (ViewBag.LoginError != null && (bool) (ViewBag.LoginError))
         {
             <div class="alert alert-danger">
-                <div class="alert-body">
+                <div>
                     <strong>Błąd!</strong><br/> Nie udało się zalogować. Wpisz poprawne dane!
                 </div>
             </div>
@@ -23,7 +23,7 @@
                 </div>
                 <div class="row">
                     <small>Hasło:</small><br/>
-                    @Html.EditorFor(model => model.Password, new {htmlAttributes = new {@class = "form-control"}})
+                    @Html.EditorFor(model => model.Password, new {htmlAttributes = new {@class = "form-control", @type = "password"}})
                 </div><br/>
                 <div class="row">
                     <button type="submit">Zaloguj</button>
