--- a/Developer/Views/Admin/Workers.cshtml
+++ b/Developer/Views/Admin/Workers.cshtml
@@ -57,7 +57,8 @@
                             @item.CreatedAt.ToShortDateString()
                         </td>
                         <td style="text-align: center">
-                            @Html.ActionLink("Edytuj", "EditWorker", new { id = item.Id }, new { @class = "btn btn-success btn-xs" })
+                            @Html.ActionLink("Pokaż", "Worker", new { id = item.Id }, new { @class = "btn btn-info btn-xs" })
+                            @Html.ActionLink("Edytuj", "EditWorker", new {id = item.Id}, new {@class = "btn btn-success btn-xs"})
                         </td>
                     </tr>
                 }
